# openGLTest

./: .gitignore  CMakeLists.txt  makef.bat  run.bat
src/: main.cpp
src/graphics/: readme.md
src/math/: math.h
src/math/functions/: functions.cpp  functions.h
src/math/matrix/: matrix.cpp  matrix.h
src/math/quaternion/: quaternion.h
src/math/vector/: vector.cpp  vector.h
src/utils/loader/: loader.cpp  loader.h
